fixed a problem with min-hight on tablet screens for form page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,7 +213,7 @@ main {
 
 #signup-form {
     color: #ffffff;
-    background-color: rgba(60, 60, 60, .6);
+    background-color: rgba(60, 60, 60, 0.6);
     padding: 30px;
 }
 
@@ -223,7 +223,7 @@ main {
 }
 
 .text-input {
-    background-color: transparent;
+    background: transparent;
     color: #fafafa;
     width: 100%;
     height: 25px;
@@ -337,6 +337,7 @@ main {
     #signup {
         background-position: center;
         position: relative;
+        min-height: 100vh;
     }
 
     #signup-form {
